--- a/index.html
+++ b/index.html
@@ -317,9 +317,38 @@ button:hover {
 
             <section class="panel" aria-labelledby="imu-heading">
                 <h2 id="imu-heading"><i class="fas fa-microchip"></i> IMU (Accéléromètre/Gyroscope)</h2>
-                <div class="data-point"><span>Accélération X</span><span id="acc-x">--</span></div>
-                <div class="data-point"><span>Accélération Y</span><span id="acc-y">--</span></div>
-                <div class="data-point"><span>Accélération Z</span><span id="acc-z">--</span></div>
+                <div class="label" style="color:var(--accent);">🛠️ ÉTATS INTERNES (KALMAN 21)</div>
+<div class="data-grid">
+    <div class="data-point"><span>Acc Filtrée</span><span id="f-acc-xyz">0/0/0</span></div>
+    <div class="data-point"><span>Biais Estimés</span><span id="bias-acc-val" style="color:#ffcc00;">--</span></div>
+    <div class="data-point"><span>Dérive Gyro</span><span id="bias-gyro-val" style="color:#ffcc00;">--</span></div>
+    <div class="data-point"><span>Confiance Matrice</span><span id="kalman-p-certainty">--</span></div>
+</div>
+                <section class="panel">
+    <h2><i class="fas fa-microchip"></i> Diagnostics 21-États</h2>
+    
+    <div class="data-grid">
+        <div class="data-point">
+            <span>Accélération Linéaire (m/s²)</span>
+            <span id="f-acc-xyz">0.00 / 0.00 / 0.00</span>
+        </div>
+        
+        <div class="data-point">
+            <span>Biais Capteur (Estimation)</span>
+            <span id="bias-acc-val" style="color:var(--warning);">--</span>
+        </div>
+
+        <div class="data-point">
+            <span>Dérive Gyro (Zéro-Drift)</span>
+            <span id="bias-gyro-val" style="color:var(--warning);">--</span>
+        </div>
+
+        <div class="data-point">
+            <span>Confiance de Mesure</span>
+            <span id="kalman-p-certainty">--</span>
+        </div>
+    </div>
+                </section>
                 <div class="data-point"><span>Champ Magnétique X</span><span id="mag-x">--</span></div>
                 <div class="data-point"><span>Champ Magnétique Y</span><span id="mag-y">--</span></div>
                 <div class="data-point"><span>Champ Magnétique Z</span><span id="mag-z">--</span></div>
@@ -327,11 +356,11 @@ button:hover {
 <div class="data-grid">
     <div class="data-point">
         <span>Biais Acc (X/Y/Z)</span>
-        <span id="bias-acc-val" class="tabular">0.000 / 0.000 / 0.000</span>
+        <span id="bias-acc-val" class="tabular">-.--- / -.--- / -.---</span>
     </div>
     <div class="data-point">
         <span>Dérive Gyro</span>
-        <span id="bias-gyro-val" class="tabular">0.000°/s</span>
+        <span id="bias-gyro-val" class="tabular">-.---°/s</span>
     </div>
     <div class="data-point">
         <span>Confiance P-Matrix</span>
@@ -357,8 +386,14 @@ button:hover {
             <section class="panel" aria-labelledby="speed-heading">
                 <h2 id="speed-heading"><i class="fas fa-tachometer-alt"></i> Vitesse, Distance & Relativité</h2>
                 <div class="speed-display" role="status" aria-live="polite">
-                    <span id="speed-main-display">0.0 km/h</span> 
-                    <small id="speed-status-text">Attente du signal GPS...</small>
+                    <div class="hud-main-data">
+    <div id="main-speed" class="tabular">0.0000</div>
+    <div class="unit">KM/H</div>
+</div>
+<div class="hud-sub-data">
+    <span>γ (Lorentz):</span> <span id="gamma-factor-precise">1.00000000</span>
+    <span>Status:</span> <span id="reality-status-main">INTEGRITY_OK</span>
+</div>
 
                 <div class="data-point" style="background: rgba(0, 255, 255, 0.1); border: 1px solid #00ffff;">
                 <span style="color: #00ffff;">🚀 Vitesse Cosmique</span>
@@ -466,7 +501,14 @@ button:hover {
                 <div class="data-point"><span>Force G (Verticale)</span><span id="force-g-vert">--</span></div>
                 <div class="data-point"><span>Vitesse Angulaire (Gyro)</span><span id="angular-speed">--</span></div>
                 <div class="data-point"><span>Coeff. Balistique (Inertie)</span><span id="ballistic-coeff">--</span></div>
-                <div class="data-point"><span>Force G Résultante</span><span id="g-force-resultant">-.--- G</span></div>
+                <div class="data-point">
+    <span>g local (Somigliana)</span>
+    <span id="gravity-theoretical">9.80665</span>
+</div>
+<div class="data-point">
+    <span>Anomalie de Bouguer</span>
+    <span id="gravity-anomaly">-.----</span>
+</div>
                 <hr>
                 <h3>Mécanique des Fluides</h3>
                 <div class="data-point"><span>Pression Dynamique (q)</span><span id="dynamic-pressure">-.-- Pa</span></div>
@@ -588,7 +630,12 @@ button:hover {
              </section>            
     <section class="panel full-width" style="grid-column: 1 / -1; margin-top: 10px;">
         <h2><i class="fas fa-chart-line"></i> Télémétrie Inertielle (64-bit)</h2>
-        <canvas id="telemetry-canvas"></canvas>
+        <div class="dual-canvas">
+    <div class="canvas-label">BRUIT BRUT (CAPTEUR)</div>
+    <canvas id="canvas-raw"></canvas>
+    <div class="canvas-label">SIGNAL FILTRÉ (21-ÉTATS)</div>
+    <canvas id="canvas-clean"></canvas>
+        </div>
     </section>
 </main><script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/11.8.0/math.js"></script>
 <script src="vendor/three.min.js"></script>
